Add realization of build agent and build server
