# packages/build-agent/src/server-api.js
@@ -1,7 +1,7 @@
 const axios = require('axios');
 
 const instance = axios.create({
-	baseURL: `${process.env.SERVER_HOST}:${process.env.SERVER_PORT}`
+	baseURL: `http://${process.env.SERVER_HOST}:${process.env.SERVER_PORT}/`
 });
 
 
@@ -12,9 +12,8 @@ const instance = axios.create({
  * @param {String} port
  * @returns {Promise<>}
  */
-function notifyAgent({ host, port }) {
+function notifyAgent({ port }) {
 	return instance.post('/notify-agent', {
-		host,
 		port
 	});
 }
@@ -24,13 +23,15 @@ function notifyAgent({ host, port }) {
  *
  * @param {String} id
  * @param {String} status
+ * @param {Number} duration
  * @param {String} log
  * @returns {Promise<>}
  */
-function notifyBuildResult({ id, status, log }) {
-	return instance.post('/notify-agent', {
+function notifyBuildResult({ id, status, duration, log }) {
+	return instance.post('/notify-build-result', {
 		id,
 		status,
+		duration,
 		log
 	});
 }
